cart-data-service/cart-data-service-role.yml
##################################################################################################
# Cart service
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cart-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart-data-service-vs
spec:
  hosts:
  - "*"
  gateways:
  - cart-gateway
  http:
  - match:
    - uri:
        prefix: /cartdata
    - uri:
        exact: /cartdata/swagger-ui.html
    route:
    - destination:
        host: cartdata
        port:
          number: 6060
---
apiVersion: v1
kind: Service
metadata:
  name: cartdata
  labels:
    app: cartdata
    service: cartdata
spec:
  ports:
    - port: 6060
      name: http
  selector:
    app: cartdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-data-service
  labels:
    app: cartdata
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartdata
      version: v1
  template:
    metadata:
      labels:
        app: cartdata
        version: v1
    spec:
      serviceAccountName: cart-data-app
      containers:
        - name: cartdata
          image: docker.io/biswabhusan/cart-data-service:5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6060
